--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   kartal: ^2.7.0
   vexana: ^3.1.1
+  async: ^2.9.0
 
 dev_dependencies:
   flutter_test:
