--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   kartal: ^2.7.0
   vexana: ^3.1.1
   async: ^2.9.0
+  
+  uikit:
+    path: module/uikit
 
 dev_dependencies:
   flutter_test:
